--- a/manifests/colorapp.yaml
+++ b/manifests/colorapp.yaml
@@ -10,3 +10,5 @@ spec:
     image: 359775151382.dkr.ecr.us-east-1.amazonaws.com/colorapp-awsecr:latest
     ports:
     - containerPort: 8080
+  imagePullSecrets:
+  - name: regcred
