fixing errors in mysqldb yaml files

--- a/manifests/mysqldb/mysqlDeployment.yaml
+++ b/manifests/mysqldb/mysqlDeployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysqlDeployment
+  name: mysql-deployment
   labels:
     app: mysqldb
 spec:
