--- a/manifests/colorapp/colorappReplicaSet.yaml
+++ b/manifests/colorapp/colorappReplicaSet.yaml
@@ -21,7 +21,7 @@ spec:
           image: 359775151382.dkr.ecr.us-east-1.amazonaws.com/colorapp-awsecr:latest
           env:
           - name: DBHOST
-            value: "mysql.sankar-db.svc.cluster.local"
+            value: "mysql.sankarnath-db.svc.cluster.local"
           - name: DBUSER
             value: "root"
           - name: DBPWD
