--- a/manifests/colorapp/colorapp.yaml
+++ b/manifests/colorapp/colorapp.yaml
@@ -12,7 +12,7 @@ spec:
     - containerPort: 8080
     env:
     - name: DBHOST
-      value: "mysql.sankarnath-db.svc.cluster.local"
+      value: "mysqldb.sankarnath-db.svc.cluster.local"
     - name: DBUSER
       value: "root"
     - name: DBPWD
