--- a/manifests/colorapp/colorappDeployment.yaml
+++ b/manifests/colorapp/colorappDeployment.yaml
@@ -3,18 +3,18 @@ kind: Deployment
 metadata:
   name: colorapp-deployment
   labels:
-    app: colorapp
+    app: employees
 
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: colorapp
+      app: employees
 
   template:
     metadata:
       labels:
-        app: colorapp
+        app: employees
 
     spec:
       containers:
